dsl2/src/test/resources/parsing/invalid/bad_parsing/string_invalid.uss
string val = "a
a
a";